k8s-specifications/vote-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: vote
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: vote.youlearn.link
    nginx.ingress.kubernetes.io/affinity: cookie
    nginx.ingress.kubernetes.io/affinity-mode: persistent
  name: vote
spec:
  rules:
  - host: vote.youlearn.link
    http:
      paths: 
      - backend:
          serviceName: vote
          servicePort: 5000
        path: /*
